<resources>
    <string name="app_name">Ex_4_27</string>
    <string name="select_start">선택을 시작 하시겠습니까</string>
    <string name="start">시작점</string>
    <string name="like_pat">좋아하는 애완동물은?</string>
    <string name="pet_dog">강아지</string>
    <string name="pet_cat">고양이</string>
    <string name="pet_panda">팬더</string>
    <string name="btn_done">선택완료</string>
    <string name="title">애완동물사</string>
    <string name="btn_finish">종료</string>
    <string name="btn_first">처음으로</string>
</resources>