<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_start"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />
    <Switch
        android:id="@+id/switch_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        />
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/like_pat"
            android:textSize="20sp"/>
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rb_dog"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_dog"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/rb_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_cat"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/rb_panda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_panda"
                android:textSize="15sp"/>
        </RadioGroup>
        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/dog"
            android:scaleType="fitXY"
            />
        <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_finish"
            />
        <Button
            android:id="@+id/btn_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_first"
            />

    </LinearLayout>

</LinearLayout>